--- a/src/views/musica/musica.css
+++ b/src/views/musica/musica.css
@@ -1,8 +1,28 @@
-.action-item {
-  list-style: none;
-  margin-left: 5px;
-}
-ul {
+.action-itens {
   display: flex;
   justify-content: space-around;
+}
+
+.action-itens a {
+  text-decoration: none;
+  color: black;
+  transition: 0.3s ease-in-out;
+}
+
+.action-itens a:hover {
+  color: #f83036;
+}
+
+.loading {
+  display: flex;
+  margin: auto;
+}
+
+.btn-cadastro a {
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-cadastro:hover {
+  background-color: #f83036;
 }
